enhance tests